# generic

./: .env.vault  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
py/: .gitignore  Dockerfile  Makefile  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
py/apps/py-app/: .env.example  Makefile  package.json  pyproject.toml  tailwind.config.js
py/apps/py-app/src/: __main__.py  config.py  state.py
py/apps/py-app/src/agents/: __init__.py  admin_chat_agent.py
py/apps/py-app/src/agents/tools/: __init__.py  get_system_stats.py  run_analysis.py
py/apps/py-app/src/server/: __init__.py  deps.py  templates.py
py/apps/py-app/src/server/events/: __init__.py  chat.py  widgets.py
py/apps/py-app/src/server/handlers/: component.py  page.py
py/apps/py-app/src/server/health/: __init__.py
py/apps/py-app/src/server/pages/: __init__.py
py/apps/py-app/src/tasks/: __init__.py  cron.py  deps.py  scheduler.py
py/apps/py-app/src/tasks/jobs/: __init__.py  cleanup_expired_data.py  complete_thread.py  process_widget.py  run_analysis.py  send_welcome_notification.py  widget_maintenance.py
py/apps/py-app/styles/: main.css
py/apps/py-app/templates/components/: theme-switcher.html  user.html
py/apps/py-app/templates/layouts/: admin.html  app.html  base.html
py/apps/py-app/templates/pages/: index.html
py/docs/: ADMIN.md  CONTRIBUTING.md  DATABASE.md  PACKAGE_SETUP.md  PYTHON_LIBRARY_PATTERNS.md  README.md  SUCCESS_CRITERIA.md  TASKS.md
py/static/css/: main.css
py/templates/components/: mobile-menu.html
py/templates/layouts/: home.html
(+83 files in other folders)
